--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <section class="card-container">
         <!-- Card 1 -->
         <div class="card">
-            <h2 class="card-title">Oxilog</h2>
-            <img src="img/oxilog_01.jpeg" alt="Oxilog" class="card-img">            
+            <h2 class="card-title">Oxylog</h2>
+            <img src="img/oxylog_01.jpeg" alt="Oxilog" class="card-img">            
             <button class="btn-view" onclick="location.href='page/item_01_oxilog.html'">Ver</button>
         </div>
 
