Atualizada Pagina Index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Card 1 -->
         <div class="card">
             <h2 class="card-title">Oxilog</h2>
-            <img src="../SantaRita/img/oxylog_02.jpeg" alt="Oxilog" class="card-img">          
+            <img src="img/oxylog_02.jpeg" alt="Oxilog" class="card-img">          
             <button class="btn-view" onclick="location.href='page/item_01_oxilog.html'">Ver</button>
         </div>
 
