Alterada extenção de jpeg para jpg

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <!-- Card 1 -->
         <div class="card">
             <h2 class="card-title">Oxilog</h2>
-            <img src="img/oxylog_02.jpeg" alt="Oxilog" class="card-img">          
+            <img src="img/oxylog_02.jpg" alt="Oxilog" class="card-img">          
             <button class="btn-view" onclick="location.href='page/item_01_oxilog.html'">Ver</button>
         </div>
 
         <!-- Card 2 -->
         <div class="card">
             <h2 class="card-title">Kit Traquelectomia</h2>
-            <img src="img/kit_traquelectomia_conectores_01.jpeg" alt="Kit Traquelectomia" class="card-img">            
+            <img src="img/kit_traquelectomia_conectores_01.jpg" alt="Kit Traquelectomia" class="card-img">            
             <button class="btn-view" onclick="location.href='page/item_02_kit_traquelectomia.html'">Ver</button>
         </div>
     </section>
